--- a/distribution/src/main/site/content/customising-web-runner.html
+++ b/distribution/src/main/site/content/customising-web-runner.html
@@ -14,8 +14,8 @@ instances required to match the textual steps need to be registered with
 the application.</p>
 
 <p>Maven users can model their own module on the <a
-    href="https://svn.codehaus.org/jbehave/trunk/web/examples/trader-web">trader
-web example</a></p>
+    href="http://git.codehaus.org/gitweb.cgi?p=jbehave-web.git;a=tree;f=examples/trader-runner">trader
+runner example</a></p>
 
 <p>Ant users can download the web distribution from <a
     href="download.html">download page</a></p>
@@ -27,7 +27,7 @@ web example</a></p>
     <li>Edit <b>webapp/WEB-INF/web.xml</b> to configure the
     Registrar class name that you've defined, replacing the <b>org.jbehave.web.runner.waffle.JBehaveRegistrar</b>
     class name with your fully-qualified Registrar class name. See <a
-        href="https://svn.codehaus.org/jbehave/trunk/web/examples/trader-web/src/main/java/org/jbehave/web/examples/trader/runner/TraderRegistrar.java">TraderRegistrar</a>
+        href="http://git.codehaus.org/gitweb.cgi?p=jbehave-web.git;a=blob;f=examples/trader-runner/src/main/java/org/jbehave/web/examples/trader/runner/TraderRegistrar.java">TraderRegistrar</a>
     for an example of how easy it is. The minimal requirement is to
     specify the one or more instances of Steps that you need to run the
     scenarios.</li>
