JBEHAVE-335: Added data files and show file pages.

--- a/web-runner/src/main/java/org/jbehave/web/runner/wicket/pages/Template.html
+++ b/web-runner/src/main/java/org/jbehave/web/runner/wicket/pages/Template.html
@@ -23,6 +23,7 @@
         <div class="menu-group menu-entry"><a>Menu</a>
             <div id="menu-group-content" class="menu-group-content">
                 <div class="menu-entry"><a href="home">Home</a></div>
+                <div class="menu-entry"><a href="data/files">Data Files</a></div>
                 <div class="menu-entry"><a href="steps/find">Find Steps</a></div>
                 <div class="menu-entry"><a href="story/run">Run Story</a></div>
             </div>
