--- a/web-runner/src/main/java/org/jbehave/web/runner/wicket/pages/Template.html
+++ b/web-runner/src/main/java/org/jbehave/web/runner/wicket/pages/Template.html
@@ -33,8 +33,7 @@
 
 <div id="content"><wicket:child>child</wicket:child></div>
 
-<div id="footer"><a href="http://jbehave.org/">JBehave</a>
-Copyright&copy; 2003-2010
+<div id="footer"><a href="http://jbehave.org/">JBehave</a> &copy; 2003-2010
 </div> <!-- end footer --> 
 
 </div> <!-- end view -->
