Renamed view file content page.

--- a/web-runner/src/main/java/org/jbehave/web/runner/wicket/pages/DataFiles.html
+++ b/web-runner/src/main/java/org/jbehave/web/runner/wicket/pages/DataFiles.html
@@ -11,8 +11,7 @@
                 <table>
                     <tr wicket:id="file">
                         <td><span wicket:id=path>file path</span></td>
-                        <td><a href="#" wicket:id="show">Show</a></td>
-                        <td><a href="#" wicket:id="delete">Delete</a></td>
+                        <td><a href="#" wicket:id="view">View</a>|<a href="#" wicket:id="delete">Delete</a></td>
                     </tr>
                 </table>
             </div>
