--- a/web-runner/src/main/java/org/jbehave/web/runner/wicket/pages/DataFiles.html
+++ b/web-runner/src/main/java/org/jbehave/web/runner/wicket/pages/DataFiles.html
@@ -4,20 +4,33 @@
 </head>
 <body>
 <wicket:extend>
-    <div id="files">
+    <form wicket:id="listForm">
         <fieldset>
             <legend>Data Files</legend>
             <div wicket:id="files">
+            </div>
+	       <p>
+	           <input wicket:id="showContentButton" type="submit" value="Show Content" />
+               <input wicket:id="hideContentButton" type="submit" value="Hide Content" />
+               <input wicket:id="deleteButton" type="submit" value="Delete" />
+	       </p>
+	   </fieldset>
+    </form>
+    
+    <div id="contentContainer">
+        <fieldset>
+            <legend>Content</legend>
+            <div wicket:id="contentContainer">
                 <table>
                     <tr wicket:id="file">
+                        <td><a href="#" wicket:id="view">View</a></td>
                         <td><span wicket:id=path>file path</span></td>
-                        <td><a href="#" wicket:id="view">View</a>|<a href="#" wicket:id="delete">Delete</a></td>
                     </tr>
                 </table>
             </div>
         </fieldset>
     </div>
-    
+
     <form wicket:id="uploadForm">
      <fieldset>
       <legend>Upload</legend>
