--- a/distribution/src/main/site/content/customising-web-runner.html
+++ b/distribution/src/main/site/content/customising-web-runner.html
@@ -22,12 +22,12 @@ runner example</a></p>
 
 <ul>
     <li>Unzip it to a local directory</li>
-    <li>Add a jar containing your Steps and Registrar instances to
+    <li>Add a jar containing your Steps and Wicket application instances to
     lib/ directory</li>
     <li>Edit <b>webapp/WEB-INF/web.xml</b> to configure the
-    Registrar class name that you've defined, replacing the <b>org.jbehave.web.runner.waffle.JBehaveRegistrar</b>
-    class name with your fully-qualified Registrar class name. See <a
-        href="http://git.codehaus.org/gitweb.cgi?p=jbehave-web.git;a=blob;f=examples/trader-runner/src/main/java/org/jbehave/web/examples/trader/runner/TraderRegistrar.java">TraderRegistrar</a>
+    Application class name that you've defined, replacing the <b>org.jbehave.web.runner.wicket.WebRunnerApplication</b>
+    class name with your fully-qualified Application class name. See <a
+        href="http://git.codehaus.org/gitweb.cgi?p=jbehave-web.git;a=blob;f=examples/trader-runner/src/main/java/org/jbehave/web/examples/trader/runner/TraderRunnerApplication.java">TraderRunnerApplication</a>
     for an example of how easy it is. The minimal requirement is to
     specify the one or more instances of Steps that you need to run the
     scenarios.</li>
@@ -45,8 +45,7 @@ runner example</a></p>
 overridden by adding them to the <b>src/main/webapp</b> directory. Only
 custom resources that override the default ones are required. So, e.g.
 to change the default style, only <b>src/main/webapp/style/jbehave/jbehave.css</b>
-needs to be added. Similary, to change home page template, only <b>src/main/webapp/ftl/home.ftl</b>
-is needed. If any of these are removed the defaults will apply.</p>
+needs to be added.</p>
 
 </body>
 </html>
