Separated upload from unarchiving in file manager.

--- a/web-runner/src/main/java/org/jbehave/web/runner/wicket/pages/DataFiles.html
+++ b/web-runner/src/main/java/org/jbehave/web/runner/wicket/pages/DataFiles.html
@@ -37,12 +37,10 @@
         <p>
         <div wicket:id="uploadInput" class="upload"/>
         </p>
-        <input wicket:id="ajaxSubmit" type="button" value="Upload"/>
+        <input wicket:id="uploadButton" type="submit" value="Upload"/>
      </fieldset>
     </form>
 
-    <div wicket:id="feedback"></div>
-    
 </wicket:extend>
 </body>
 </html>
