JBEHAVE-335:  Added WITH_METHODS view to Find Steps page.

--- a/web-runner/src/main/java/org/jbehave/web/runner/wicket/pages/FindSteps.html
+++ b/web-runner/src/main/java/org/jbehave/web/runner/wicket/pages/FindSteps.html
@@ -13,7 +13,7 @@
                     <textarea wicket:id="matchingStep" rows="25" cols="100"></textarea>
                 </p>
                 <p>
-                    <input wicket:id="findButton" type="submit" value="Find" />
+                    <input wicket:id="findButton" type="submit" value="Find" /> <select wicket:id="viewSelect"></select>
                 </p> 
             </fieldset>
         </div>
