JBEHAVE-335: Some final eye-candy.

--- a/web-runner/src/main/java/org/jbehave/web/runner/wicket/pages/FindSteps.html
+++ b/web-runner/src/main/java/org/jbehave/web/runner/wicket/pages/FindSteps.html
@@ -17,15 +17,17 @@
                 </p> 
             </fieldset>
         </div>
-        <div id="stepsFound">    
+        <div id="ouput">    
            <fieldset>
                 <legend>Stepdocs</legend>
                 <p>
                     <pre wicket:id="stepdocs">
                     </pre>
                 </p>
-                <p>Using steps instances</p>
-                <p id="stepsInstances">
+            </fieldset>
+           <fieldset>
+                <legend>Steps Instances</legend>
+                <p>
                     <pre wicket:id="stepsInstances">
                     </pre>
                 </p>
