JBEHAVE-335:  Added failure stack trace to run story page.

--- a/web-runner/src/main/java/org/jbehave/web/runner/wicket/pages/RunStory.html
+++ b/web-runner/src/main/java/org/jbehave/web/runner/wicket/pages/RunStory.html
@@ -23,6 +23,10 @@
                     <pre wicket:id="output">
                     </pre>
                 </p>
+                <p>
+                    <pre wicket:id="failure">
+                    </pre>
+                </p>
             </fieldset>
          </div>        
     </form>
