Updated release notes.

--- a/distribution/src/main/site/content/release-notes.html
+++ b/distribution/src/main/site/content/release-notes.html
@@ -32,6 +32,8 @@
 </li>
 <li>[<a href='http://jira.codehaus.org/browse/JBEHAVE-335'>JBEHAVE-335</a>] -         Migrate Web Runner to use Wicket as web application framework
 </li>
+<li>[<a href='http://jira.codehaus.org/browse/JBEHAVE-336'>JBEHAVE-336</a>] -         Find Steps page
+</li>
 </ul>
          
 <h1>JBehave Web - Version 2.1.6 (Dec 8, 2009)</h1>
