JBEHAVE-335:  Added sorting of stepdocs.

--- a/web-runner/src/main/java/org/jbehave/web/runner/wicket/pages/FindSteps.html
+++ b/web-runner/src/main/java/org/jbehave/web/runner/wicket/pages/FindSteps.html
@@ -13,7 +13,9 @@
                     <textarea wicket:id="matchingStep" rows="25" cols="100"></textarea>
                 </p>
                 <p>
-                    <input wicket:id="findButton" type="submit" value="Find" /> <select wicket:id="viewSelect"></select>
+                    <input wicket:id="findButton" type="submit" value="Find" /> 
+                    View: <select wicket:id="viewSelect"></select>
+                    Sorting: <select wicket:id="sortingSelect"></select>
                 </p> 
             </fieldset>
         </div>
