Renamed example story

--- a/distribution/src/main/site/content/using-web-runner.html
+++ b/distribution/src/main/site/content/using-web-runner.html
@@ -34,9 +34,9 @@ to display the result in the same page.</p>
 	<li>From Menu, click on <b>Run Story</b>, which will take you to a
 	page where you can enter your textual story.</li>
 	<li>Input textual story in textarea (e.g you can cut &amp; paste
-	a scenario found in the <a
-		href="http://git.codehaus.org/gitweb.cgi?p=jbehave-web.git;a=blob;f=examples/trader-runner/src/main/resources/trader.scenario">trader
-	scenario</a>) and click on <b>Run</b> button.</li>
+	the sample scenarios found in the <a
+		href="http://git.codehaus.org/gitweb.cgi?p=jbehave-web.git;a=blob;f=examples/trader-runner/src/main/resources/trader.story">trader
+	story</a>) and click on <b>Run</b> button.</li>
 	<li>Upon execution, the output of the story is shown below. By
 	default the same output is shown as the one you would see when running
 	JBehave via a command-line interface. This includes any details of
@@ -54,9 +54,9 @@ associated methods.</p>
 	<li>From Menu, click on <b>Find Steps</b>, which will take you to
 	a page where you can enter your textual step.</li>
 	<li>Input textual step in textarea (e.g you can cut &amp; paste a
-	step from the scenario found in the <a
-		href="http://git.codehaus.org/gitweb.cgi?p=jbehave-web.git;a=blob;f=examples/trader-runner/src/main/resources/trader.scenario">trader
-	scenario</a>) and click on <b>Find</b> button.</li>
+	step from the sample scenarios found in the <a
+		href="http://git.codehaus.org/gitweb.cgi?p=jbehave-web.git;a=blob;f=examples/trader-runner/src/main/resources/trader.story">trader
+	story</a>) and click on <b>Find</b> button.</li>
 	<li>A blank input will simply show all the steps that are
 	configured.</li>
 	<li>Upon execution, the steps found are shown below. By default,
