Increased unit and integration test coverage for find steps page.

--- a/web-runner/src/main/java/org/jbehave/web/runner/wicket/pages/FindSteps.html
+++ b/web-runner/src/main/java/org/jbehave/web/runner/wicket/pages/FindSteps.html
@@ -23,14 +23,14 @@
            <fieldset>
                 <legend>Stepdocs</legend>
                 <p>
-                    <pre wicket:id="stepdocs">
+                    <pre wicket:id="stepdocs" id="stepdocs">
                     </pre>
                 </p>
             </fieldset>
            <fieldset>
                 <legend>Steps Instances</legend>
                 <p>
-                    <pre wicket:id="stepsInstances">
+                    <pre wicket:id="stepsInstances" id="stepsInstances">
                     </pre>
                 </p>
                 
