Added behaviour verification for view changes in find steps page.

--- a/web-runner/src/main/java/org/jbehave/web/runner/wicket/pages/FindSteps.html
+++ b/web-runner/src/main/java/org/jbehave/web/runner/wicket/pages/FindSteps.html
@@ -21,7 +21,7 @@
         </div>
         <div id="ouput">    
            <fieldset>
-                <legend>Stepdocs</legend>
+                <legend>Steps</legend>
                 <p>
                     <pre wicket:id="stepdocs" id="stepdocs">
                     </pre>
