--- a/distribution/src/main/site/content/download.html
+++ b/distribution/src/main/site/content/download.html
@@ -9,9 +9,9 @@
 <h2>Stable releases</h2>
 
 <p>Stable releases can be found on the <a
-    href="http://mvnrepository.com/artifact/org.jbehave.web">Codehaus
+	href="https://nexus.codehaus.org/content/repositories/releases/org/jbehave/web/">Codehaus
 Nexus Repository Manager</a> (which is synched with the <a
-    href="http://repo1.maven.org/maven2/org/jbehave/web">Central Maven
+	href="http://repo1.maven.org/maven2/org/jbehave/web">Central Maven
 Repository</a>).</p>
 
 <h2 id="snapshot">Latest Snapshots</h2>
