--- a/distribution/src/main/site/content/migration-paths.html
+++ b/distribution/src/main/site/content/migration-paths.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
 <head>
-<title>Migrating from 2.x</title>
+<title>Migration Paths</title>
 </head>
 
 <body>
 
-<h2>Wicket Application</h2>
+<h2>From 3.0 to 3.1</h2>
+
+<p>By default JBehave Web dependes on JBehave Core 3.1.  It still supports running with JBehave Core 3.0
+except when excercising 3.1 functionality, such as meta filtering in the Run Story page.</p>
+
+<h2>From 2.x to 3.0</h2>
 
 <p>The 3.x Web Runner is a webapp build on <a
 	href="http://wicket.apache.org">Wicket</a>, while the 2.x Web Runner
