Updated distribution for release.

--- a/distribution/src/main/site/content/using-web-runner.html
+++ b/distribution/src/main/site/content/using-web-runner.html
@@ -37,6 +37,8 @@ to display the result in the same page.</p>
 	the sample scenarios found in the <a
 		href="http://git.codehaus.org/gitweb.cgi?p=jbehave-web.git;a=blob;f=examples/trader-runner/src/main/resources/trader.story">trader
 	story</a>) and click on <b>Run</b> button.</li>
+	<li>Optionally, a meta filter can be specified.  This requires the Web Runner to 
+	be built using JBehave Core 3.1+.</li>
 	<li>Upon execution, the output of the story is shown below. By
 	default the same output is shown as the one you would see when running
 	JBehave via a command-line interface. This includes any details of
