Added QueueStory page.

--- a/web-runner/src/main/java/org/jbehave/web/runner/wicket/pages/Template.html
+++ b/web-runner/src/main/java/org/jbehave/web/runner/wicket/pages/Template.html
@@ -24,6 +24,7 @@
                 <div class="menu-entry"><a href="data/files">Data Files</a></div>
                 <div class="menu-entry"><a href="steps/find">Find Steps</a></div>
                 <div class="menu-entry"><a href="story/run">Run Story</a></div>
+                <div class="menu-entry"><a href="story/queue">Queue Story</a></div>
             </div>
         </div>
     </div>    
