JBEHAVE-462:  Added docs on WebQueue.

--- a/distribution/src/main/site/content/index.html
+++ b/distribution/src/main/site/content/index.html
@@ -17,8 +17,10 @@ Development</a> (BDD).</p>
 <p>Features of JBehave Web include:</p>
 
 <ul>
+    <li>A <a href="using-web-queue.html">Web Queue</a> to allow
+    generic stories to be run asynchronously via a simple web interface.</li>
 	<li>A <a href="using-web-runner.html">Web Runner</a> to allow
-	generic stories to be run via a simple web interface.</li>
+	generic stories to be run synchronously via a simple web interface.</li>
 	<li>A <a href="using-selenium.html">Selenium integration</a>
 	module to allow automation of stories for web applications using <a
 		href="http://seleniumhq.org">Selenium</a>.</li>
