Updated release notes.

--- a/distribution/src/main/site/content/release-notes.html
+++ b/distribution/src/main/site/content/release-notes.html
@@ -5,6 +5,15 @@
 </head>
 <body>
 
+<h1>JBehave Web - Version 3.3.1 (Apr 17, 2011)</h1>
+
+<h2>        Bug
+</h2>
+<ul>
+<li>[<a href='http://jira.codehaus.org/browse/JBEHAVE-482'>JBEHAVE-482</a>] -         Initialisation errors in RemoteWebDriverProvider are not being reported
+</li>
+</ul>
+       
 <h1>JBehave Web - Version 3.3 (Apr 1, 2011)</h1>
               
 <h2>        Bug
