Updated to latest core release.  Updated release notes.

--- a/distribution/src/main/site/content/release-notes.html
+++ b/distribution/src/main/site/content/release-notes.html
@@ -5,6 +5,17 @@
 </head>
 <body>
 
+<h1>JBehave Web - Version 3.3.2 (May 12, 2011)</h1>
+            
+<h2>        Improvement
+</h2>
+<ul>
+<li>[<a href='http://jira.codehaus.org/browse/JBEHAVE-493'>JBEHAVE-493</a>] -         Split Firefox logic out of generic Type provider and into own class.
+</li>
+<li>[<a href='http://jira.codehaus.org/browse/JBEHAVE-494'>JBEHAVE-494</a>] -         Create LazyWebDriver to allow for WebDriver canonical PageFactory.initElements(..) processing of annotated fields.
+</li>
+</ul>
+                
 <h1>JBehave Web - Version 3.3.1 (Apr 17, 2011)</h1>
 
 <h2>        Bug
