Lookup dependencies via search.maven.org.

--- a/distribution/src/main/site/content/download.html
+++ b/distribution/src/main/site/content/download.html
@@ -27,12 +27,12 @@ version and the filename with the latest timestamp.</p>
 
 <table class="bodyTable">
 <tr class="a"><th>Group Id</th><th>Artifact Id</th><th>Versions</th></tr>
-<tr class="b"><td>org.jbehave.web</td><td>jbehave-web-io</td><td><a href="http://mvnrepository.com/artifact/org.jbehave.web/jbehave-web-io">lookup</a></td></tr>
-<tr class="b"><td>org.jbehave.web</td><td>jbehave-web-queue</td><td><a href="http://mvnrepository.com/artifact/org.jbehave.web/jbehave-web-queue">lookup</a></td></tr>
-<tr class="a"><td>org.jbehave.web</td><td>jbehave-web-resources</td><td><a href="http://mvnrepository.com/artifact/org.jbehave.web/jbehave-web-resources">lookup</a></td></tr>
-<tr class="b"><td>org.jbehave.web</td><td>jbehave-web-runner</td><td><a href="http://mvnrepository.com/artifact/org.jbehave.web/jbehave-web-runner">lookup</a></td></tr>
-<tr class="a"><td>org.jbehave.web</td><td>jbehave-web-selenium</td><td><a href="http://mvnrepository.com/artifact/org.jbehave.web/jbehave-web-selenium">lookup</a></td></tr>
-<tr class="b"><td>org.jbehave.web</td><td>jbehave-distribution</td><td><a href="http://mvnrepository.com/artifact/org.jbehave.web/jbehave-web-distribution">lookup</a></td></tr>
+<tr class="b"><td>org.jbehave.web</td><td>jbehave-web-io</td><td><a href="http://search.maven.org/#search|ga|1|jbehave-web-io">lookup</a></td></tr>
+<tr class="b"><td>org.jbehave.web</td><td>jbehave-web-queue</td><td><a href="http://search.maven.org/#search|ga|1|jbehave-web-queue">lookup</a></td></tr>
+<tr class="a"><td>org.jbehave.web</td><td>jbehave-web-resources</td><td><a href="http://search.maven.org/#search|ga|1|jbehave-web-resources">lookup</a></td></tr>
+<tr class="b"><td>org.jbehave.web</td><td>jbehave-web-runner</td><td><a href="http://search.maven.org/#search|ga|1|jbehave-web-runner">lookup</a></td></tr>
+<tr class="a"><td>org.jbehave.web</td><td>jbehave-web-selenium</td><td><a href="http://search.maven.org/#search|ga|1|jbehave-web-selenium">lookup</a></td></tr>
+<tr class="b"><td>org.jbehave.web</td><td>jbehave-distribution</td><td><a href="http://search.maven.org/#search|ga|1|jbehave-web-distribution">lookup</a></td></tr>
 </table>
 
 <p>A POM artifact can be declared as dependency using different build systems:</p>
