JBEHAVE-525:  Added tutorials page.

--- a/distribution/src/main/site/content/using-sauce-labs.html
+++ b/distribution/src/main/site/content/using-sauce-labs.html
@@ -21,7 +21,7 @@
     </p>
     <p>
         A fully functional example webapp using Sauce is provided in <a
-            href="https://github.com/jbehave/jbehave-tutorial/tree/master/etsy-stories">JBehave
+            href="tutorials.html">JBehave
             Tutorial</a>.
     </p>
 
