--- a/distribution/src/main/site/content/using-web-queue.html
+++ b/distribution/src/main/site/content/using-web-queue.html
@@ -30,9 +30,9 @@
         and installed in a local directory.
     </p>
     <p>
-        A fully functional example webapp is provided in <a
-            href="https://github.com/jbehave/jbehave-tutorial/tree/master/etsy-stories">JBehave
-            Tutorial </a>. The Web Queue can be activated via the system
+        A fully functional example using WebQueue is provided in <a
+            href="tutorials.html">JBehave
+            Tutorials</a>. The WebQueue can be activated via the system
         property <b>WEB_QUEUE</b> and the input page can be accessed via
         the URL <b>http://localhost:8090</b>.
     </p>
