Use latest release version of JBehave Core.  Fixed release date.

--- a/distribution/src/main/site/content/release-notes.html
+++ b/distribution/src/main/site/content/release-notes.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<h1>JBehave Web - Version 3.4.1 (Nov xx, 2011)</h1>          
+<h1>JBehave Web - Version 3.4.1 (Nov 13, 2011)</h1>          
                    
 <h2>        Improvement
 </h2>
